--- a/Restneer.Web.Api/appsettings.Development.json
+++ b/Restneer.Web.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=1;MaximumPoolSize=5;"
+    "Default": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=1;MaximumPoolSize=5;AllowUserVariables=true"
   }
 }
