--- a/Restneer.Core/Restneer.Core.csproj
+++ b/Restneer.Core/Restneer.Core.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Domain\" />
@@ -23,16 +24,16 @@
     <Folder Include="Infrastructure\Connection\" />
     <Folder Include="Infrastructure\Connection\MySql\" />
     <Folder Include="Infrastructure\Repository\" />
-    <Folder Include="Infrastructure\Repository\ApiRole\" />
+    <Folder Include="Infrastructure\Repository\ApiRoleResourceRoute\" />
     <Folder Include="Domain\Model\" />
     <Folder Include="Domain\Model\Entity\" />
     <Folder Include="Application\UseCase\" />
     <Folder Include="Domain\Business\" />
-    <Folder Include="Domain\Business\ApiRole\" />
+    <Folder Include="Domain\Business\ApiRoleResourceRoute\" />
     <Folder Include="Domain\Model\Enum\" />
     <Folder Include="Domain\Model\ValueObject\" />
-    <Folder Include="Application\UseCase\ApiRole\" />
+    <Folder Include="Application\UseCase\ApiRoleResourceRoute\" />
     <Folder Include="Application\Module\" />
-    <Folder Include="Application\Module\ApiRole\" />
+    <Folder Include="Application\Middleware\" />
   </ItemGroup>
 </Project>
