--- a/Restneer.Web.Api/appsettings.Development.json
+++ b/Restneer.Web.Api/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "Default": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=1;MaximumPoolSize=5;AllowUserVariables=true"
+  },
+  "Server": {
+    "ApiKey": "e6b3c557-72c7-4fc0-a239-d4d8877d5a32"
   }
 }
