--- a/Restneer.Web.Api/Properties/launchSettings.json
+++ b/Restneer.Web.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/api-role",
+      "launchUrl": "'/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
