--- a/Restneer.Web.Api/appsettings.json
+++ b/Restneer.Web.Api/appsettings.json
@@ -9,6 +9,11 @@
     "Default": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=1;MaximumPoolSize=5;AllowUserVariables=true"
   },
   "Server": {
-    "ApiKey": "1df9a512-f783-4899-bdc2-844604128171"
+    "ApiKey": "1df9a512-f783-4899-bdc2-844604128171",
+    "Jwt": {
+      "SecretKey": "093dd506-0d28-47b6-9149-33001720c34f",
+      "Audience": "http://localhost",
+      "DaysToExpire": 30
+    }
   }
 }
