--- a/Restneer.Web.Api/Restneer.Web.Api.csproj
+++ b/Restneer.Web.Api/Restneer.Web.Api.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="RequestModel\" />
+    <Folder Include="RequestModel\V1\" />
+    <Folder Include="RequestModel\V1\ApiUser\" />
   </ItemGroup>
 
   <ItemGroup>
