--- a/Restneer.Core/Restneer.Core.csproj
+++ b/Restneer.Core/Restneer.Core.csproj
@@ -11,12 +11,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SimpleInjector" Version="4.3.0" />
-    <PackageReference Include="MySqlConnector" Version="0.45.1" />
+    <PackageReference Include="MySqlConnector" Version="0.46.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Domain\" />
@@ -31,10 +32,12 @@
     <Folder Include="Domain\Logic\" />
     <Folder Include="Domain\Model\Enum\" />
     <Folder Include="Domain\Model\ValueObject\" />
-    <Folder Include="Application\Module\" />
+    <Folder Include="Application\Interface\" />
     <Folder Include="Application\Middleware\" />
     <Folder Include="Application\Cache\" />
     <Folder Include="Application\Boot\" />
     <Folder Include="Infrastructure\Utility\" />
+    <Folder Include="Application\Service\" />
+    <Folder Include="Application\Controller\" />
   </ItemGroup>
 </Project>
