--- a/Restneer.Web.Api/Restneer.Web.Api.csproj
+++ b/Restneer.Web.Api/Restneer.Web.Api.csproj
@@ -4,15 +4,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup> 
     <Folder Include="wwwroot\" />
     <Folder Include="RequestModel\" />
-    <Folder Include="RequestModel\V1\" />
-    <Folder Include="RequestModel\V1\ApiUser\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc" Version="4.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
   </ItemGroup>
