--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mariadb:10.3
     environment:
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: restneer
+      MYSQL_DATABASE: db_restneer
     networks:
         - backend
     restart: on-failure
