--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: db_restneer
-    networks:
-        - backend
     restart: on-failure
     volumes:
      - ${PWD}/mariadb:/var/lib/mysql
     ports:
       - 3306:3306
-networks:       
-    backend:
-        driver: bridge
+  redis:
+    image: redis:5.0.0
+    command: redis-server --requirepass 123456  
+    ports:
+      - 6379:6379
