--- a/Restneer.Core/Restneer.Core.csproj
+++ b/Restneer.Core/Restneer.Core.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Domain\" />
@@ -41,5 +42,6 @@
     <Folder Include="Infrastructure\Model\" />
     <Folder Include="Infrastructure\Model\ValueObject\" />
     <Folder Include="Infrastructure\ResultFlow\" />
+    <Folder Include="Infrastructure\Connection\Redis\" />
   </ItemGroup>
 </Project>
