--- a/Restneer.Web.Api/appsettings.json
+++ b/Restneer.Web.Api/appsettings.json
@@ -6,7 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings":  {
-    "Default": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=1;MaximumPoolSize=5;AllowUserVariables=true"
+    "MySqlDefault": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=1;MaximumPoolSize=5;AllowUserVariables=true",
+    "RedisDefault": "localhost:6379,password=123456,defaultDatabase=0"
   },
   "Server": {
     "ApiKey": "1df9a512-f783-4899-bdc2-844604128171",
