--- a/Restneer.Web.Api/appsettings.Development.json
+++ b/Restneer.Web.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "MySqlDefault": "Server=127.0.0.1;Database=db_restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=10;MaximumPoolSize=25;AllowUserVariables=true",
+    "MySqlDefault": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=10;MaximumPoolSize=25;AllowUserVariables=true",
     "RedisDefault": "localhost:6379,password=123456,defaultDatabase=0"
   },
   "Server": {
