--- a/Restneer.Web.Api/appsettings.Development.json
+++ b/Restneer.Web.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "ConnectionStrings": {
     "MySqlDefault": "Server=127.0.0.1;Database=restneer;Uid=root;Pwd=123456;Pooling=True;MinimumPoolSize=10;MaximumPoolSize=25;AllowUserVariables=true",
-    "RedisDefault": "localhost:6379,password=123456,defaultDatabase=0"
+    "RedisDefault": "localhost:6379,password=123456"
   },
   "Server": {
     "ApiKey": "e6b3c557-72c7-4fc0-a239-d4d8877d5a32",
